--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@auth0/angular-jwt": "^5.0.2",
+    "@types/googlemaps": "^3.43.3",
     "ngx-cookie-service": "^13.2.0",
     "ngx-google-places-autocomplete": "^2.0.5",
     "rxjs": "~7.5.0",
@@ -39,7 +40,6 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "ts-node": "^10.8.1",
     "typescript": "~4.6.2",
     "yargs": "^17.5.1"
   }
